--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -1,8 +1,9 @@
 .avatar {
+  position: relative;
   display: inline-block;
   overflow: hidden;
   border-radius: 100%;
-  position: relative;
+  border: 1px solid #eee;
 }
 
 .avatar_large {
@@ -10,7 +11,7 @@
   width: 62px;
   height: 62px;
   line-height: 62px;
-  font-size: 35px;
+  font-size: 20px;
 }
 
 .avatar_medium {
@@ -41,7 +42,7 @@
   text-align: center;
   vertical-align: middle;
   color: white;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .avatar__img {
