--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,9 +1,10 @@
 .btn {
+  float: right;
   min-width: 120px;
-  background-color: #007aff;
+  background-color: #ffdb4d;
   font-size: 1.1rem;
-  color: #fff;
+  color: #000;
   padding: 10px 15px;
   border: none;
-  border-radius: 20px;
+  border-radius: 3px;
 }
