--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -62,3 +62,9 @@
   height: 18px;
   background-image: url(./img/attachment.svg);
 }
+
+.icon_search {
+  width: 18px;
+  height: 18px;
+  background-image: url(./img/search.svg);
+}
