--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -37,7 +37,7 @@
 }
 
 .content__counter {
-  background: #fab81e;
+  background: #8ed9b2;
   border-radius: 12px;
   text-align: center;
   color: white;
@@ -80,7 +80,7 @@
 }
 
 .content__text_online {
-  color: #fab81e;
+  color: #8ed9b2;
 }
 
 .contact_small .content__name {
