--- a/src/components/Spinner/styles.css
+++ b/src/components/Spinner/styles.css
@@ -1,8 +1,8 @@
 .spinner {
   width: 36px;
   height: 36px;
-  margin: 5px auto;
-  border: 2px solid #ffdb4d;
+  margin: 15px auto;
+  border: 2px solid #8ed9b2;
   border-top-color: transparent;
   border-radius: 50%;
   animation: spin 1s linear infinite;
