--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -68,3 +68,9 @@
   height: 18px;
   background-image: url(./img/search.svg);
 }
+
+.icon_logout {
+  width: 18px;
+  height: 18px;
+  background-image: url(./img/logout.svg);
+}
