--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,6 +4,21 @@
   background-color: #f2f6fa;
 }
 
+.profile-info_logout {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 30px;
+  background-color: #f2f6fa;
+  outline: none;
+}
+
 .profile-info .icon_header-write {
   width: 25px;
   height: 25px;
