--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,12 @@
   display: flex;
   align-items: center;
   position: relative;
-  padding: 7px 10px 7px 0;
+  margin: 0 -8px;
+  padding: 7px 10px 7px 10px;
+}
+
+.contact_not-read {
+  background-color: #edf9f3;
 }
 
 .contact__content {
