--- a/src/components/ProfileAvatar/styles.css
+++ b/src/components/ProfileAvatar/styles.css
@@ -1,3 +1,13 @@
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .dropzone {
   padding: 10px 0;
 }
@@ -24,6 +34,7 @@
   width: 100%;
   height: 100%;
   clip-path: circle(100px at 100px 100px);
+  animation: fade 1s;
 }
 
 .upload-help {
