--- a/src/components/ChatInput/ChatInput.css
+++ b/src/components/ChatInput/ChatInput.css
@@ -8,6 +8,12 @@
   background: #ededed;
 }
 
+.no-button-button {
+  outline: none;
+  border: none;
+  background: transparent;
+}
+
 .search,
 .search::-webkit-search-cancel-button,
 .search::-webkit-search-results-button {
